--- a/ipy/ipy/02week-allpython-hskang.ipynb
+++ b/ipy/ipy/02week-allpython-hskang.ipynb
@@ -90,6 +90,37 @@
    "id": "19922932",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "num1 = float(input(\"첫 번째 숫자를 입력하세요: \"))\n",
+    "num2 = float(input(\"두 번째 숫자를 입력하세요: \"))\n",
+    "\n",
+    "max_num = max(num1, num2)\n",
+    "print(\"더 큰 수는\", max_num, \"입니다.\")\n",
+    "num1 = float(input(\"첫 번째 숫자를 입력하세요: \"))\n",
+    "num2 = float(input(\"두 번째 숫자를 입력하세요: \"))\n",
+    "​\n",
+    "max_num = max(num1, num2)\n",
+    "print(\"더 큰 수는\", max_num, \"입니다.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "830081fb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "첫 번째 숫자를 입력하세요: 3\n",
+    "두 번째 숫자를 입력하세요: 4\n",
+    "더 큰 수는 4.0 입니다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "27d18c33",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
