--- a/ipy/ipy/02week-allpython-hskang.ipynb
+++ b/ipy/ipy/02week-allpython-hskang.ipynb
@@ -121,7 +121,14 @@
    "id": "27d18c33",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def celsius_to_fahrenheit(celsius):\n",
+    "    return(celsius * 9/5) + 32\n",
+    "def kilometers_to_mailes(kilometers):\n",
+    "    return kilometers * 0.621371\n",
+    "def pounds_to_kilograms(pounds):\n",
+    "    return pounds * 0.453592"
+   ]
   }
  ],
  "metadata": {
